styling: fixed sdashboard sidepanel spacing

--- a/apps/frontend/src/app/GradTrak/Dashboard/Dashboard.module.scss
+++ b/apps/frontend/src/app/GradTrak/Dashboard/Dashboard.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+    width: 25%;
 
     .header {
       padding: 12px;
